Fix z-index issue

--- a/src/scss/logo.scss
+++ b/src/scss/logo.scss
@@ -3,15 +3,11 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 1000;
     transition: opacity 1s ease;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.loader.loaded {
-    opacity: 0;
+    z-index: -1000;
 }
 
 #logo {
